--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .navbar .container-fluid {
-    padding-right: 0 !important;
+    padding-left: 0 !important;
 }
 .navbar-collapse {
     background-color: #ffcc99;
